feat(api_connexion): return QueueEvent instead of DDRQ
